# rust_test

./: .gitignore  Cargo.toml  Info.plist  build_windows_cross.sh  installer.iss
.github/workflows/: release.yml
src/: api.rs  db.rs  events.rs  main.rs  permissions.rs  sync.rs  system.rs  tracker.rs  ui.rs
